--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script type='text/javascript' src="main.js"></script>
 </head>
 <body>
-    
+<p class="massage" id='myMessage'> Hello World </p>
+<h1> Primary Heading of document. Include only 1 per page.  </h1>
+<h2> Sub Headings. </h2>
 </body>
 </html>
